fix overflow issue

--- a/src/pages/dashboard-products/dashboard-products.styles.css
+++ b/src/pages/dashboard-products/dashboard-products.styles.css
@@ -18,3 +18,12 @@ h3 {
 .header-paragraph {
     opacity: .7;
 }
+
+.product-table-container {
+    height: 70vh;
+    overflow: auto;
+    ::-webkit-scrollbar {
+        display: none;
+    }
+    scrollbar-width: none;
+}
